--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -102,11 +102,11 @@ body {
 .Signup {
   background: rgb(255, 255, 255);
   border-radius: 4px;
-  
+  padding-left: 66px;
   max-width: 615px;
   padding-bottom: 66px;
   padding-top: 46px;
-  text-align: center;
+  text-align: left;
   width: 90%;
 }
 .Signup > .logo {
@@ -119,6 +119,7 @@ body {
 }
 
 .input-group {
+  font-weight: bold;
   margin-bottom: 26px;
   display: inline-block;
 }
@@ -131,7 +132,7 @@ body {
   font-family: 'Roboto', sans-serif;
   max-width: 420px;
   text-align: left;
-  width: 80%;
+  width: 100%;
 }
 .input-group > label {
   color: #676767;
@@ -140,9 +141,9 @@ body {
   text-transform: uppercase;
 }
 .input-group > input {
-  background: #f2f2f5;
+  background: #fafafa;
   border-radius: 4px;
-  border: 1px solid #e5e5e5;
+  border: 1.5px solid #dddada;
   color: #676767;
   font-size: 16px;
   height: 40px;
@@ -159,7 +160,7 @@ body {
   font-size: 16px;
 }
 
-button {
+#button {
   border-radius: 5px;
   border: none;
   color: #fff;
@@ -174,16 +175,16 @@ button {
   transition: background 0.3s;
   width: 80%;
 }
-button.primary {
+.primary {
   background: #f58733;
 }
-button.primary:hover {
+.primary:hover {
   background: #ea6c0b;
 }
-button.secondary {
+.button.secondary {
   background: #c1d7aa;
 }
-button.secondary:hover {
+.button.secondary:hover {
   background: #a8c787;
 }
 
@@ -297,6 +298,10 @@ nav {
 .card {
   width: 500px;
   height: 220px;
+}
+
+.card:hover {
+  border: 0.5px solid #000000;
 }
 
 #card-title a {
