--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -84,7 +84,7 @@ body {
 .Login {
   background: rgb(255, 255, 255);
   border-radius: 4px;
-  
+  padding-right: 40px;
   max-width: 615px;
   padding-bottom: 66px;
   padding-top: 46px;
@@ -118,29 +118,33 @@ body {
   
 }
 
-.input-group {
+.group {
+  position: relative;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%;
   font-weight: bold;
   margin-bottom: 26px;
   display: inline-block;
 }
 
-.input-group:nth-last-child(-n + 2) {
+.group:nth-last-child(-n + 2) {
   margin-bottom: 50px;
 }
-.input-group > label,
-.input-group > input {
+.group > label,
+.group > input {
   font-family: 'Roboto', sans-serif;
   max-width: 420px;
   text-align: left;
   width: 100%;
 }
-.input-group > label {
+.group > label {
   color: #676767;
   display: inline-block;
   margin-bottom: 5px;
   text-transform: uppercase;
 }
-.input-group > input {
+.group > input {
   background: #fafafa;
   border-radius: 4px;
   border: 1.5px solid #dddada;
@@ -151,11 +155,11 @@ body {
   padding: 0 15px;
   transition: all 0.3s;
 }
-.input-group > input:focus {
+.group > input:focus {
   background: #fff;
   border-color: #c4c4c4;
 }
-.input-group > input::placeholder {
+.group > input::placeholder {
   color: #c4c4c4;
   font-size: 16px;
 }
@@ -173,7 +177,7 @@ body {
   outline: 0;
   padding: 10px 0;
   transition: background 0.3s;
-  width: 80%;
+  width: 85%;
 }
 .primary {
   background: #f58733;
@@ -247,13 +251,39 @@ nav {
     color: rgb(255, 255, 255);
 }
 
-.search-group {
+/* .search-group {
   margin-right: 35%;
   display: flex;
   position: relative;
     align-items: stretch;
     width: 90%;
+} */
+
+.search-group {
+  width: 90%;
+  margin-right: 35%;
+  position: relative;
+  display: flex;
+  /* flex-wrap: wrap; */
+  align-items: stretch;
+  /* margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased; */
 }
+
+.search-group-append {
+  /* width: 90%;
+  margin-right: 35%;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  margin: 0;
+  padding: 0; */
+  box-sizing: border-box;
+  margin-left: -1px;
+} 
 
 #search_field {
   height: 2.4rem;
@@ -555,9 +585,9 @@ footer {
 /* Header User Profile */
 
 .avatar-nav {
-  margin-right: 0.6rem;
-  height: 2.2rem;
-  width: 2.2rem;
+  margin-right: 0.3rem;
+  height: 2.8rem;
+  width: 2.8rem;
 }
 
 /* Checkout Steps */
@@ -655,6 +685,12 @@ footer {
   background-color: #ff0000;
   border-color: #fa2323;
 }
+
+#update_profile {
+  background-color: #ff0000;
+  border-color: #fa2323;
+}
+
 
 /* Confirm Order */
 
@@ -810,3 +846,22 @@ ul.CTAs a {
 .yellow {
   color: #fdcc0d;
 }
+
+#red {
+  color: #ff0000;
+}
+
+
+.input-group {
+  width: 90%;
+  margin-right: 35%;
+}
+
+/* .modal {
+  padding: 1rem 1rem;
+  padding-right: 30px;
+} */
+
+/* h1 {
+  padding: 10px;
+} */
