--- a/frontend/src/components/_Atomic/BannerCarousel.css
+++ b/frontend/src/components/_Atomic/BannerCarousel.css
@@ -7,8 +7,7 @@ align-items: center;
 
 .image {
     flex:1;
-    height: undefined;
-    width: undefined;
+    zoom: 130%;
     border-radius: 10px;
     }
 
